@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 # vim:ts=4:sw=4:softtabstop=4:smarttab:expandtab
 
-# Copyright (c) 2014-2021 Kevin B. Hendricks, and Doug Massay
+# Copyright (c) 2014-2023 Kevin B. Hendricks, and Doug Massay
 # Copyright (c) 2014      John Schember
 # All rights reserved.
 #
@@ -38,6 +38,8 @@ SPECIAL_HANDLING_TAGS = OrderedDict([
 ])
 
 SPECIAL_HANDLING_TYPES = ['xmlheader', 'doctype', 'comment', 'cdata', 'pi']
+
+WHITESPACE_CHARS = (' ', '\n', '\r', '\f', '\t', '\v')
 
 class QuickXHTMLParser(object):
 
@@ -109,14 +111,14 @@ class QuickXHTMLParser(object):
         if ttype is None:
             # parse any attributes
             while s.find('=', p) != -1 :
-                while p < n and s[p:p + 1] == ' ' : p += 1
+                while p < n and s[p:p + 1] in WHITESPACE_CHARS : p += 1
                 b = p
                 while p < n and s[p:p + 1] != '=' : p += 1
                 # attribute names can be mixed case and are in SVG
                 aname = s[b:p]
                 aname = aname.rstrip(' ')
                 p += 1
-                while p < n and s[p:p + 1] == ' ' : p += 1
+                while p < n and s[p:p + 1] in WHITESPACE_CHARS : p += 1
                 if s[p:p + 1] in ('"', "'") :
                     qt = s[p:p + 1]
                     p = p + 1
