@@ -3,8 +3,10 @@ pre-2.x.x
       - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
       - add ability to change keyboard focus using keyboard shortcuts or menus
           to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
-	Bug Fixes
-	  - patch Qt6.5.3 to avoid transient child window resize bug on Windows
+    Bug Fixes
+      - patch Qt6.5.3 to avoid transient child window resize bug on Windows
+      - fix QuickParser bug when parseing attribute names not properly ignoreing all legal whitespace
+
 
 Sigil-2.0.2
     Bug Fixes
